fix footer gap on mobile

--- a/_less/theme/theme.less
+++ b/_less/theme/theme.less
@@ -61,7 +61,9 @@ html {
 		margin: 0 auto;
 		// background: @background-color;
 		height: 100%;
-		margin-bottom: 589.766px; // height of footer for parallax footer
+		@media (@sm-query) {
+			margin-bottom: 589.766px; // height of footer for parallax footer
+		}
 	}
 }
 html {
